markdeep-slides.css
:root {
    --font-size: 24;       /* unit-less – just tweak it to your liking */
    --side-margin: 2rem;   /* left and right margin of each slide */
    --aspect-ratio: 16 / 9;

    --slide-number-color: #bbb;
}

html.presentation.taller,
html.draft {
    font-size: calc(var(--font-size) * 0.1vw);
}
html.presentation.wider {
    font-size: calc(var(--font-size) * 0.1vh * (var(--aspect-ratio)));
}

body {
    margin: 0;
    padding: 0;
}

.slide {
    padding: 0 var(--side-margin);
    margin: 0;
    box-sizing: content-box;  /* exclude borders from width/height attribute */
    overflow: hidden;
}

.presentation .slide {
    display: none;
    border-style: solid;
    border-color: black;
}

.draft .slide {
    --slide-width: 100vw;
    --slide-height: calc(var(--slide-width) / (var(--aspect-ratio)));

    width: calc(var(--slide-width) - 2 * var(--side-margin));
    height: var(--slide-height);
    border: none !important;
    margin-bottom: 0.5rem;
    box-shadow: 0 0 0.3rem gray,
                0 0.5rem 0 #eee;
    display: inline-block;
}

.presentation.taller .slide {
    --slide-width: 100vw;
    --slide-height: calc(var(--slide-width) / (var(--aspect-ratio)));
    --slide-letterbox-height: calc(100vh - var(--slide-height));

    width: calc(var(--slide-width) - 2 * var(--side-margin));
    height: var(--slide-height);
    border-top-width: calc(var(--slide-letterbox-height) / 2);
    border-bottom-width: calc(var(--slide-letterbox-height) / 2);
    border-left-width: 0;
    border-right-width: 0;
}

.presentation.wider .slide {
    --slide-height: 100vh;
    --slide-width: calc(var(--slide-height) * (var(--aspect-ratio)));
    --slide-letterbox-width: calc(100vw - var(--slide-width));

    height: var(--slide-height);
    width: calc(var(--slide-width) - 2 * var(--side-margin));
    border-left-width: calc(var(--slide-letterbox-width) / 2);
    border-right-width: calc(var(--slide-letterbox-width) / 2);
    border-top-width: 0;
    border-bottom-width: 0;
}

.slide-number {
    font-variant-numeric: tabular-nums lining-nums;  /* doin' a better job than whoever build the macos menu bar clock */
    position: absolute;
    margin-left: calc(var(--slide-width) - var(--side-margin) - 1rem);
    margin-top: calc(var(--slide-height) - 1.8rem);
    font-weight: normal;
    font-size: 0.8rem;
    color: var(--slide-number-color);
    height: 0;
    width: 0;
}

.slide .presenter-notes {
    display: none;  /* will be shown in separate window */
}

#black {
    position: fixed;
    z-index: 9001;
    top: 0;
    left: 0;
    width: 100vw;
    height: 100vh;
    background-color: black;
    display: none;
}

.markdeepFooter {
    text-align: left;
}

.presentation .markdeepFooter {
    display: none;  /* sorry morgan */
}

